--- a/stylecss.css
+++ b/stylecss.css
@@ -299,7 +299,7 @@ input[type=text],select, textarea{
 }
 
 /* Style date */
-input[type=date]{
+input[type=date], input[type=email]{
 	  width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
